--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
     ],
     "require": {},
     "require-dev": {
-        "phpspec/phpspec": "^3.2"
+        "phpspec/phpspec": "^3.2",
+        "leanphp/phpspec-code-coverage": "^3.1",
+        "satooshi/php-coveralls": "^1.0"
     }
 }
