--- a/phpspec.yml
+++ b/phpspec.yml
@@ -2,3 +2,11 @@ suites:
     prewk_suite:
         namespace: Prewk
         psr4_prefix: Prewk
+extensions:
+  LeanPHP\PhpSpec\CodeCoverage\CodeCoverageExtension: ~
+    format:
+      - clover
+    output:
+      clover: build/logs/clover.xml
+    whitelist:
+      - src
