--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     },
     "scripts": {
-        "test": "phpspec run"
+        "test": "phpspec run && psalm"
     },
     "config": {
         "bin-dir": "bin"
@@ -27,6 +27,7 @@
     "require-dev": {
         "phpspec/phpspec": "^3.2",
         "leanphp/phpspec-code-coverage": "^3.1",
-        "satooshi/php-coveralls": "^1.0"
+        "satooshi/php-coveralls": "^1.0",
+        "vimeo/psalm": "^1.0"
     }
 }
