--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
         }
     ],
     "require": {
-        "prewk/option": "*",
+        "prewk/option": ">= 1.3.0",
         "php": ">=7.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^3.2",
-        "leanphp/phpspec-code-coverage": "^3.1",
-        "satooshi/php-coveralls": "^1.0",
-        "vimeo/psalm": "^3.2"
+        "phpspec/phpspec": "^3.4.3",
+        "leanphp/phpspec-code-coverage": "^3.1.1",
+        "php-coveralls/php-coveralls": "^2.4.3",
+        "vimeo/psalm": "^3.2.12"
     }
 }
