Drop support for PHP 7.2 and below
also upgrade all dev dependencies to their latest versions

--- a/phpspec.yml
+++ b/phpspec.yml
@@ -3,7 +3,7 @@ suites:
         namespace: Prewk
         psr4_prefix: Prewk
 extensions:
-    LeanPHP\PhpSpec\CodeCoverage\CodeCoverageExtension:
+    FriendsOfPhpSpec\PhpSpec\CodeCoverage\CodeCoverageExtension:
         format:
             - clover
         output:
