Backport some changes from Option (#9)
* ci: switch from travis to github actions

* Drop support for PHP 7.2 and below

also upgrade all dev dependencies to their latest versions

* fix phpdoc type of $pass

* return new instances instead of returning $this

* remove result type check

this is catched by the return type of the function anyway, so this is redundant

* simplify if-else block to an if

* add missing return closure type

--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,16 @@
         }
     ],
     "require": {
-        "prewk/option": "*",
-        "php": ">=7.0"
+        "prewk/option": ">= 1.3.0",
+        "php": ">=7.3.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^3.2",
-        "leanphp/phpspec-code-coverage": "^3.1",
-        "satooshi/php-coveralls": "^1.0",
-        "vimeo/psalm": "^3.2"
+        "phpspec/phpspec": "^7.0.1",
+        "friends-of-phpspec/phpspec-code-coverage": "^6.0.0",
+        "phpunit/php-code-coverage": "^9.2.5",
+        "phpunit/php-file-iterator": "^3.0.5",
+        "php-coveralls/php-coveralls": "^2.4.3",
+        "guzzlehttp/guzzle": "^7.3.0",
+        "vimeo/psalm": "^4.6.4"
     }
 }
