--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,8 @@
 {
     "name": "prewk/result",
     "description": "Result object for PHP inspired by Rust",
-    "type": "library",
     "license": "(MIT or Apache-2.0)",
-    "autoload": {
-        "psr-4": {
-            "Prewk\\": "src/"
-        }
-    },
-    "scripts": {
-        "test": "phpspec run && psalm"
-    },
-    "config": {
-        "bin-dir": "bin",
-        "platform": {
-            "php": "7.3"
-        }
-    },
+    "type": "library",
     "authors": [
         {
             "name": "Oskar Thornblad",
@@ -24,16 +10,37 @@
         }
     ],
     "require": {
-        "prewk/option": ">= 1.3.0",
-        "php": ">=7.3.0"
+        "php": ">=8.1.0",
+        "prewk/option": ">= 1.3.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^7.0.1",
-        "friends-of-phpspec/phpspec-code-coverage": "^6.0.0",
-        "phpunit/php-code-coverage": "^9.2.5",
-        "phpunit/php-file-iterator": "^3.0.5",
-        "php-coveralls/php-coveralls": "^2.4.3",
-        "guzzlehttp/guzzle": "^7.3.0",
-        "vimeo/psalm": "^4.6.4"
+        "ergebnis/composer-normalize": "2.42.0",
+        "infection/infection": "0.27.11",
+        "phpunit/phpunit": "10.5.15",
+        "psalm/plugin-phpunit": "0.19.0",
+        "symplify/easy-coding-standard": "12.1.14",
+        "vimeo/psalm": "5.24.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Prewk\\": "src/"
+        },
+        "files": [
+            "helpers.php"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Prewk\\Result\\Test\\": "test/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "infection/extension-installer": true
+        },
+        "platform": {
+            "php": "8.1.0"
+        }
     }
 }
